testsuite/tests/properties/invalid_block_expr/misplaced_expr.lkt
import common

class Example: FooNode {
    @exported fun p(): Bool = {
        false
        val _ = 2;
    }
}
